@@ -4,7 +4,10 @@
 
  Changes between 0.9.8t and 0.9.8u [xx XXX xxxx]
 
-  *)
+  *) Fix CVE-2011-4619: make sure we really are receiving a 
+     client hello before rejecting multiple SGC restarts. Thanks to
+     Ivan Nestlerode <inestlerode@us.ibm.com> for discovering this bug.
+     [Steve Henson]
 
  Changes between 0.9.8s and 0.9.8t [18 Jan 2012]
 
